fixed JS for dark mode functionality on results list place links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,14 @@ body::-webkit-scrollbar {
     background-color: rgb(23, 33, 33);
 }
 
+.link-light-mode {
+    color: rgb(23, 33, 33);
+}
+
+.link-dark-mode {
+    color: rgb(242, 253, 255);
+}
+
 .row {
     --bs-gutter-x: 0;
 }
